Front end updates again

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UniLend</title>
+  <title>Caravan</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="Caravan – Lend and Rent Liquidity Positions" property="og:title">
+  <meta content="Caravan – Lend and Rent Liquidity Positions" property="twitter:title">
+  <meta content="Caravan is a platform that allows for the lending and renting of Uniswap v3 liquidity positions. Caravan creates a new market for liquidity positions as well as opportunities for users to capitalize on the shifting liquidity market." name="description">
+  <meta content="Caravan is a platform that allows for the lending and renting of Uniswap v3 liquidity positions. Caravan creates a new market for liquidity positions as well as opportunities for users to capitalize on the shifting liquidity market." name="og:description">
+  <meta content="Caravan is a platform that allows for the lending and renting of Uniswap v3 liquidity positions. Caravan creates a new market for liquidity positions as well as opportunities for users to capitalize on the shifting liquidity market." name="twitter:description">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
